force-app/main/default/objects/Leave_Allocation__mdt/Leave_Allocation__mdt.object-meta.xml
<CustomObject>
    <label>Leave Allocation</label>
    <pluralLabel>Leave Allocations</pluralLabel>
</CustomObject> 