force-app/main/default/objects/Leave_Allocation__mdt/fields/Days_Allocated__c.field-meta.xml
<CustomField>
    <fullName>Days_Allocated__c</fullName>
    <label>Days Allocated</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField> 