force-app/main/default/objects/Leave_Allocation__mdt/fields/Leave_Type__c.field-meta.xml
<CustomField>
    <fullName>Leave_Type__c</fullName>
    <label>Leave Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Vacation</fullName>
            </value>
            <value>
                <fullName>Sick Leave</fullName>
            </value>
            <value>
                <fullName>Personal Leave</fullName>
            </value>
            <value>
                <fullName>Maternity Leave</fullName>
            </value>
            <value>
                <fullName>Paternity Leave</fullName>
            </value>
            <value>
                <fullName>PROMPT_TEMPLATE_CONFIG</fullName>
                <label>Prompt Template Config</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField> 