force-app/main/default/objects/Leave_Allocation__mdt/fields/Template_ID__c.field-meta.xml
<CustomField>
    <fullName>Template_ID__c</fullName>
    <description>The Einstein Prompt Template ID to use for leave calculations</description>
    <inlineHelpText>Enter the Einstein Prompt Template ID (e.g., 0hfKc000000kEduIAE)</inlineHelpText>
    <label>Template ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField> 